Issue #12331 - Fixed PR review changes.

--- a/profile/modules/apps/os_widgets/templates/os-widgets-follow-me-link-text.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-follow-me-link-text.html.twig
@@ -4,12 +4,13 @@
  * Theme implementation for a follow me widget markup text field.
  *
  * Available variables:
- * - domain : Containing domain
+ * - title : Containing domain
 #}
 
 <div class="rrssb no-label">
   <ul class="rrssb-buttons">
-    <li class="rrssb-{{ domain }}">
+   {% set rrssb_class = title == 'Google+' ? 'googleplus' :  (title == '__blank__' ? '' : title) %}
+    <li class="rrssb-{{ rrssb_class |lower }}">
       <a>
         <span class="rrssb-icon"></span>
         <span class="rrssb-text"></span>
