--- a/profile/themes/os_base/scss/component/_widgtes.scss
+++ b/profile/themes/os_base/scss/component/_widgtes.scss
@@ -91,10 +91,11 @@
       li {
         padding: .5em 0;
         display: block;
+        // needs to replace with sprite
         a {
           &:before {
             content: "";
-            background: url(../../../themes/os_base/images/puzzle.png) no-repeat;
+            background: url(../../../themes/os_base/images/widgets.png) no-repeat;
             height: 21px;
             width: 21px;
             position: absolute;
@@ -104,77 +105,91 @@
         &.addthis {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/add-this.png) no-repeat;
+              background-position: -20px -190px;
             }
           }
         }
         &.basic {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/basic-block.png) no-repeat;
+              background-position: -20px -250px;
             }
           }
         }
         &.custom-text-html {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/html.png) no-repeat;
+              background-position: -20px -310px;
             }
           }
         }
         &.embed-media {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/media.png) no-repeat;
+              background-position: -20px 610px;
             }
           }
         }
         &.publication-types {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/publication12.png) no-repeat;
+              background-position: -20px 850px;
             }
           }
         }
         &.featured-posts {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/featured-post.png) no-repeat;
+              background-position: -20px 370px;
             }
           }
         }
         &.media-gallery {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/media.png) no-repeat;
+              background-position: -20px 610px;
             }
           }
         }
         &.publication-years {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/date.png) no-repeat;
+              background-position: -20px 310px;
             }
           }
         }
         &.rss-feed {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/rss.png) no-repeat;
+              background-position: -20px -730px;
             }
           }
         }
         &.taxonomy {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/taxonomy-icon.png) no-repeat;
+              background-position: -20px -132px;
             }
           }
         }
         &.twitter-feed {
           a {
             &:before {
-              background: url(../../../themes/os_base/images/widgets/twitter.png) no-repeat;
+              background-position: -20px -790px;
+            }
+          }
+        }
+        &.follow-me {
+          a {
+            &:before {
+              background-position: -20px -430px;
+            }
+          }
+        }
+        &.mailchimp-subscription {
+          a {
+            &:before {
+              background-position: -20px -550px;
             }
           }
         }
