#12539 branded theme a11y fixes (#12555)
* Issue #12539 - new theme ally fixes

* Issue #12539 - fixed ally fixes

* Issue #12539 - fixing a11y issues

* Issue #12539 - fixed menu ul issue

--- a/profile/themes/os_base/templates/menu/menu.html.twig
+++ b/profile/themes/os_base/templates/menu/menu.html.twig
@@ -21,11 +21,7 @@
 #}
 {% macro menu_links(items, attributes, menu_level, classes, dropdown_classes) %}
   {% if items %}
-  {% if menu_level == 0 %}
-    <ul{{ attributes.addClass(menu_level == 0 ? classes : dropdown_classes) }} role="menubar">
-  {% else %}
-    <ul{{ attributes.addClass(menu_level == 0 ? classes : dropdown_classes) }} role="menu">
-  {% endif %}
+    <ul{{ attributes.addClass(menu_level == 0 ? classes : dropdown_classes) }} >
     {% for item in items %}
       {%
         set item_classes = item.url.getOption('container_attributes').class | split(" ")
@@ -40,7 +36,7 @@
       %}
       <li{{ item.attributes.addClass(item_classes) }}>
         {% set link_title = item.title %}
-        {% set link_attributes = item.link_attributes.setAttribute('role','menuitem') %}
+        {% set link_attributes = item.link_attributes %}
         {% if item.is_expanded and item.below %}
           {% set link_title %}{{ link_title }} <span class="caret"></span>{% endset %}
           {% set link_attributes = link_attributes.addClass('dropdown-toggle') %}
