Issue #12336 - List of Post Form and block.

--- a/profile/modules/apps/os_widgets/templates/os-widgets-list-of-posts.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-list-of-posts.html.twig
@@ -1,7 +1,7 @@
-<div id="list-of-posts">
+<ul id="list-of-posts">
 {% for post in posts %}
-  {{ post }}
+ <li>{{ post }}</li>
 {% endfor %}
   {{ pager }}
-</div>
+</ul>
 
