--- a/profile/themes/os_base/scss/component/_widgtes.scss
+++ b/profile/themes/os_base/scss/component/_widgtes.scss
@@ -11,6 +11,7 @@
   width: 240px;
   z-index: 9999;
   height: calc(100% - 40px);
+  font-family: Arial, Helvetica, sans-serif;
   &:after {
     content: "";
   }
@@ -26,6 +27,11 @@
   }
   .select-wrapper {
     z-index: 0;
+  }
+  .form-submit {
+    span.icon {
+      color: $color-white;
+    }
   }
 }
 #block-place-widget-selector-wrapper {
@@ -82,6 +88,7 @@
     font-size: 1em;
     cursor: pointer;
     text-transform: capitalize;
+    font-family: Arial, Helvetica, sans-serif;
   }
   #factory-wrapper {
     ul.links {
