--- a/profile/modules/apps/os_widgets/templates/os-widgets-follow-me.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-follow-me.html.twig
@@ -13,6 +13,7 @@
 
 {% set class = display_social ? '' : 'no-label' %}
 
+
 <div class="rrssb {{ class }}">
   {% if profile_links %}
     <ul class="rrssb-buttons">
@@ -27,7 +28,7 @@
       {% for link in profile_links %}
       {% set rrssb_class = link.title == 'Google+' ? 'googleplus' :  link.title %}
         <li class="rrssb-{{ rrssb_class |lower }}">
-          <a href ="{{ link.domian }}" target="_blank">
+          <a href ="{{ link.domain }}" target="_blank">
             <span class="rrssb-icon"></span>
             <span class="rrssb-text">{{ link.title |t }}</span>
           </a>
