--- a/profile/modules/apps/os_widgets/templates/os-widgets-follow-me.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-follow-me.html.twig
@@ -27,7 +27,7 @@
       {% for link in profile_links %}
       {% set rrssb_class = link.title == 'Google+' ? 'googleplus' :  link.title %}
         <li class="rrssb-{{ rrssb_class |lower }}">
-          <a href ="{{ link.domian }}" target="_blank">
+          <a href ="{{ link.domain }}" target="_blank">
             <span class="rrssb-icon"></span>
             <span class="rrssb-text">{{ link.title |t }}</span>
           </a>
