Issue #12589 - fixed pager, input box alignment and modal cent… (#12592)

--- a/profile/themes/os_admin/scss/components/_forms.scss
+++ b/profile/themes/os_admin/scss/components/_forms.scss
@@ -18,6 +18,9 @@ textarea.form-textarea {
   border-top-color: $color-gray6;
   min-height: 3em;
 }
+select {
+  min-height: 3.3em;
+}
 input.form-file {
   padding-top: .65em;
 }
