--- a/profile/modules/vsite/modules/vsite_site_creation/css/os_site_creation.css
+++ b/profile/modules/vsite/modules/vsite_site_creation/css/os_site_creation.css
@@ -423,8 +423,8 @@ h3 {
   max-width: 90px;
 }
 
-.ui-dialog.site-creation-form .ui-dialog-titlebar button.ui-dialog-titlebar-close {
-  margin: -8px 15px 0;
+.ui-dialog.site-creation-form {
+  top: 10px !important;
 }
 
 #site-creation-container #tos input+label {
