--- a/profile/modules/apps/os_widgets/css/os_widgets.lop.css
+++ b/profile/modules/apps/os_widgets/css/os_widgets.lop.css
@@ -1,7 +1,10 @@
 .lop-details .panel-body>div {
   display: inline-block;
+  width: 24%;
 }
-
+.lop-details .panel-body .field--name-field-publication-types {
+  width: 100%;
+}
 .block-list-of-posts-form .chosen-container {
   border: 0;
   padding: 0;
