Issue #12590 - added calendar ui

--- a/profile/themes/adams/scss/base/_base.scss
+++ b/profile/themes/adams/scss/base/_base.scss
@@ -39,7 +39,7 @@ h2.block-title {
     }
     h2.block-title {
       background-color: $white;
-      color: $color_squirrel_approx;
+      color: $color_squirrel_approx1;
       padding: 0;
       font-size: 1.2em;
     }
