--- a/profile/themes/adams/scss/base/_common.scss
+++ b/profile/themes/adams/scss/base/_common.scss
@@ -7,7 +7,7 @@
   font-size: .9em;
 }
 %extend_2 {
-  background: $color_steel_blue_approx;
+  background: $color_st_tropaz_approx;
   color: $white;
   height: 60px;
 }
