--- a/profile/themes/modern/scss/components/_calendar.scss
+++ b/profile/themes/modern/scss/components/_calendar.scss
@@ -1,8 +1,6 @@
 /**** code for upcoming/past events sheilds ****/
-.fc-listUpcoming-view, .fc-listPast-view  {
-  .fc-list-heading {
-    .fc-list-heading-main {
-      background:  url(../images/event-shield.png) no-repeat;
-    }
+.calendar.node--calendar {
+  .event-start {
+    background: url(../images/event-shield.png) no-repeat;
   }
 }
