--- a/profile/themes/peabody/scss/components/_calendar.scss
+++ b/profile/themes/peabody/scss/components/_calendar.scss
@@ -1,8 +1,5 @@
-.fc-listUpcoming-view,
-.fc-listPast-view {
-  .fc-list-heading {
-    span.fc-list-heading-main {
-      border-top: 3px solid $web_orange;
-    }
+.calendar.node--calendar {
+  .event-start {
+    border-top: 3px solid $web_orange;
   }
 }
