--- a/profile/themes/cabot/scss/components/_calendar.scss
+++ b/profile/themes/cabot/scss/components/_calendar.scss
@@ -1,14 +1,14 @@
-.fc-listUpcoming-view .fc-list-heading .fc-list-heading-main {
-  @extend %extend_1;
-  span {
-    &.event-start-month {
-      color: $black;
-    }
-    &.event-year {
-      padding: 8px 0 0;
-    }
-    .fc-listPast-view .fc-list-heading .fc-list-heading-main span {
+.calendar.node--calendar {
+  .event-start {
+    @extend %extend_1;
+    span {
       font-weight: normal;
+      &.event-start-month {
+        color: $black;
+      }
+      &.event-year {
+        padding: 8px 0 0;
+      }
     }
   }
 }
