--- a/profile/themes/everett/scss/base/_variables.scss
+++ b/profile/themes/everett/scss/base/_variables.scss
@@ -8,7 +8,7 @@ $color_concrete_approx: #f3f3f1;
 $color_indian_khaki_22_approx: #E3E0D4;
 $color_iron_approx: #d7d7d7;
 $color_fuscous_gray_approx: #555;
-
+$color-gray: #d4d2d2;
 //fonts
 $font_0: Droid Sans;
 $font_1: sans-serif !important;
