--- a/profile/themes/everett/scss/components/_calendar.scss
+++ b/profile/themes/everett/scss/components/_calendar.scss
@@ -1,14 +1,15 @@
-.fc-listUpcoming-view {
-  .fc-list-heading {
-    .fc-list-heading-main {
-      border-top-color: $color_red_stage_approx;
-      span {
-        &.event-start-month {
-          color: $color_fuscous_gray_approx;
-        }
-        &.event-start-day {
-          color: $color_fuscous_gray_approx;
-        }
+.calendar.node--calendar {
+  .event-start {
+    border: 1px solid $color-gray;
+    border-top: 3px solid $color_red_stage_approx;
+    background: $white;
+    span {
+      font-weight: normal;
+      &.event-start-month {
+        color: $color_fuscous_gray_approx;
+      }
+      &.event-start-day {
+        color: $color_fuscous_gray_approx;
       }
     }
   }
