--- a/profile/themes/hwpi_lamont/scss/components/_calendar.scss
+++ b/profile/themes/hwpi_lamont/scss/components/_calendar.scss
@@ -1,23 +1,21 @@
 /**** code for upcoming/past events sheilds ****/
-.fc-listUpcoming-view, .fc-listPast-view  {
-  .fc-list-heading {
-    .fc-list-heading-main {
-      width: 55px;
-      height: 55px;
-      background: #FFF;
-      border: 1px solid $color-light-gray3;
-      border-bottom-right-radius: 5px;
-      border-bottom-left-radius: 5px;
-      border-top-color: orange;
-      border-top-width: 3px;
-      span {
-        font-weight: normal;
-        &.event-year {
-          padding: 6px 0 0;
-        }
-        &.event-start-month {
-          color: $color-black;
-        }
+.calendar.node--calendar {
+  .event-start {
+    width: 55px;
+    height: 55px;
+    background: #FFF;
+    border: 1px solid $color-light-gray3;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-color: orange;
+    border-top-width: 3px;
+    span {
+      font-weight: normal;
+      &.event-year {
+        padding: 6px 0 0;
+      }
+      &.event-start-month {
+        color: $color-black;
       }
     }
   }
