--- a/profile/themes/hwpi_widener/scss/components/_calendar.scss
+++ b/profile/themes/hwpi_widener/scss/components/_calendar.scss
@@ -1,15 +1,16 @@
 /**** code for upcoming/past events sheilds ****/
-.fc-listUpcoming-view, .fc-listPast-view  {
-  .fc-list-heading {
-    .fc-list-heading-main {
-      background: $color-white;
-      border: 1px solid $color-gray2;
-      border-radius: 7px;
-      width: 60px;
-      span {
-        &.event-year {
-          padding: 14px 0 0;
-        }
+.calendar.node--calendar {
+  .event-start {
+    background: $color-white;
+    border: 1px solid $color-gray2;
+    border-radius: 7px;
+    width: 60px;
+    span {
+      &.event-year {
+        padding: 14px 0 0;
+      }
+      &.event-start-month {
+        color: $color-black;
       }
     }
   }
