--- a/profile/themes/monochrome/scss/components/_calendar.scss
+++ b/profile/themes/monochrome/scss/components/_calendar.scss
@@ -4,17 +4,15 @@
     color: $color_mexican_red_approx;
   }
 }
-.fc-listUpcoming-view, .fc-listPast-view {
-  .fc-list-heading {
-    .fc-list-heading-main {
-      @extend %extend_1;
-      &.event-start-month {
-        color: $black;
-      }
-      &.event-year {
-        padding: 8px 0 0;
-        font-size: 11px;
-      }
+.calendar.node--calendar {
+  .event-start {
+    @extend %extend_1;
+    &.event-start-month {
+      color: $black;
+    }
+    &.event-year {
+      padding: 8px 0 0;
+      font-size: 11px;
     }
   }
 }
