--- a/profile/themes/onepage/scss/components/_calendar.scss
+++ b/profile/themes/onepage/scss/components/_calendar.scss
@@ -1,20 +1,18 @@
 /**** code for upcoming/past events sheilds ****/
-.fc-listUpcoming-view, .fc-listPast-view  {
-  .fc-list-heading {
-    .fc-list-heading-main {
-      width: 55px;
-      height: 55px;
-      background: $color-white;
-      border: 1px solid $color-light-gray2;
-      border-top: 3px solid $color-blue;
-      border-bottom-right-radius: 5px;
-      border-bottom-left-radius: 5px;
+.calendar.node--calendar {
+  .event-start {
+    width: 55px;
+    height: 55px;
+    background: $color-white;
+    border: 1px solid $color-light-gray2;
+    border-top: 3px solid $color-blue;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    span {
+      font-weight: normal;
       &.event-year {
         padding: 6px 0 0;
         font-size: 11px;
-      }
-      span {
-        font-weight: normal;
       }
       &.event-start-month {
         color: $color-black;
