--- a/profile/themes/soft/scss/components/_calendar.scss
+++ b/profile/themes/soft/scss/components/_calendar.scss
@@ -3,16 +3,17 @@
   background-color: $color-oxford-blue;
   color: $color-white;
 }
-.fc-listUpcoming-view .fc-list-heading .fc-list-heading-main,
-.fc-listPast-view .fc-list-heading .fc-list-heading-main {
-  background: $color-white;
-  border: 1px solid $color-oxford-blue;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  .event-year {
-    border-top: 4px solid $color-oxford-blue;
-  }
-  span.event-start-day {
-    color: $color-oxford-blue;
+.calendar.node--calendar {
+  .event-start {
+    background: $color-white;
+    border: 1px solid $color-oxford-blue;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    .event-year {
+      border-top: 4px solid $color-oxford-blue;
+    }
+    span.event-start-day {
+      color: $color-oxford-blue;
+    }
   }
 }
