--- a/profile/themes/themeone/scss/components/_calendar.scss
+++ b/profile/themes/themeone/scss/components/_calendar.scss
@@ -6,17 +6,14 @@
 .fc-event-dot {
   background: $color-link;
 }
-.fc-listUpcoming-view,
-.fc-listPast-view {
-  .fc-list-heading {
-    .fc-list-heading-main {
-      background: none;
-      border: 1px solid $color-link;
-      border-radius: 4px;
-      border-top: 4px solid $color-link;
-      span.event-start-day {
-        color: $color-link;
-      }
+.calendar.node--calendar {
+  .event-start {
+    background: none;
+    border: 1px solid $color-link;
+    border-radius: 4px;
+    border-top: 4px solid $color-link;
+    span.event-start-day {
+      color: $color-link;
     }
   }
 }
