Issue #12589 - added table even row color (#12599)
* Issue #12589 - added table even row color

* Issue #12589 - Issue #12456 - Fix testNodeDeleteCancelButtonList failure

(cherry picked from commit 9ad88a39796f76fc7fc3cd09933e1dbbdd12168d)

--- a/profile/themes/os_admin/scss/components/_table.scss
+++ b/profile/themes/os_admin/scss/components/_table.scss
@@ -2,6 +2,11 @@ thead th {
   background: $color-light-gray3;
   border: solid $color-light-gray2;
 }
+tbody {
+  tr:nth-child(even) {
+    background: $color-light-gray3;
+  }
+}
 /**** ckeditor table cell ****/
 .cke_dialog_contents {
   a.cke_dialog_ui_button.colorChooser {
