--- a/profile/themes/hwpi_lamont/scss/components/_calendar.scss
+++ b/profile/themes/hwpi_lamont/scss/components/_calendar.scss
@@ -3,7 +3,7 @@
   .event-start {
     width: 55px;
     height: 55px;
-    background: #FFF;
+    background: $color-white;
     border: 1px solid $color-light-gray3;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
