--- a/profile/themes/os_base/scss/component/_calendar.scss
+++ b/profile/themes/os_base/scss/component/_calendar.scss
@@ -4,19 +4,19 @@ aside {
     .fc-row {
       &.ui-widget-header {
         th {
-          background: white;
+          background: $color-white;
           font-size: 12px;
         }
       }
     }
     .fc {
       .fc-body {
-        border: 1px solid #cacaca;
+        border: 1px solid $color-light-gray6;
         font-size: 14px;
         td {
           border: 0 none;
           &.fc-today {
-            color: #215990;
+            color: $color-link1;
             font-weight: bold;
           }
         }
@@ -66,7 +66,7 @@ aside {
 /**** calendar prev next ****/
 .fc-header-toolbar {
   .ui-button {
-    color: #215990;
+    color: $color-link1;
     &.fc-prev-button {
       background: none;
       border: 0 none;
@@ -176,7 +176,7 @@ aside {
 .calendar.node--calendar {
   margin: 0 0 20px;
   padding: 20px 0 40px;
-  border-bottom: 1px solid #ebebeb;
+  border-bottom: 1px solid $color-light-gray;
   .node--title {
     margin-bottom: 5px;
   }
