Issue #12591 - Past events tests and twig corrected.

--- a/profile/themes/os_base/templates/node/node--events--calendar.html.twig
+++ b/profile/themes/os_base/templates/node/node--events--calendar.html.twig
@@ -75,9 +75,9 @@
 
 <article{{ attributes.addClass("node--calendar calendar") }} {{ attributes }}>
   <div class="event-start">
-    <span class="event-year">{{ content.start_date.year }}</span>
-    <span class="event-start-month">{{ content.start_date.month }}</span>
-    <span class="event-start-day">{{ content.start_date.day }}</span>
+    <span class="event-year">{{ start_date.year }}</span>
+    <span class="event-start-month">{{ start_date.month }}</span>
+    <span class="event-start-day">{{ start_date.day }}</span>
   </div>
   <div class="event-content">
     {{ title_prefix }}
