Issue #12336 - code added for list of posts ui

--- a/profile/themes/os_base/scss/_overrides.scss
+++ b/profile/themes/os_base/scss/_overrides.scss
@@ -37,6 +37,7 @@
 @import "component/theme-preview";
 @import "component/mailchimp";
 @import "component/wysiwyg";
+@import "component/list-of-posts";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
