--- a/profile/modules/apps/os_widgets/templates/os-widgets-list-of-posts.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-list-of-posts.html.twig
@@ -13,7 +13,6 @@
 {% for post in posts %}
  <li>{{ post }}</li>
 {% endfor %}
-  {{ pager }}
-  {{ more_link }}
 </ul>
-
+{{ pager }}
+<div class="node-readmore">{{ more_link }}</div>
