--- a/profile/modules/apps/os_widgets/templates/os-widgets-ajax-pager.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-ajax-pager.html.twig
@@ -14,7 +14,7 @@
  */
 #}
 {% if prev_link or next_link %}
-  <nav role="navigation" aria-labelledby="{{ heading_id }}">
+  <nav role="navigation" aria-labelledby="{{ heading_id }}" id={{ heading_id }}>
     <h4 id="{{ heading_id }}" class="visually-hidden">{{ 'Pagination'|t }}</h4>
     <ul class="js-pager__items pager-mini">
       {% if prev_link %}
