--- a/profile/modules/apps/os_widgets/templates/os-widgets-list-of-posts.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-list-of-posts.html.twig
@@ -13,6 +13,6 @@
 {% for post in posts %}
  <li>{{ post }}</li>
 {% endfor %}
-  {{ pager }}
-  <div class="node-readmore">{{ more_link }}</div>
 </ul>
+{{ pager }}
+<div class="node-readmore" id={{ attributes.more_link_id }}>{{ more_link }}</div>
