Issue #12336 - added lop icon, added iframe code small devices

--- a/profile/themes/os_base/scss/component/_node.scss
+++ b/profile/themes/os_base/scss/component/_node.scss
@@ -23,3 +23,9 @@
     width: 100%;
   }
 }
+/**** ifrmae code ****/
+.field--name-field-media-oembed-content {
+  iframe {
+    max-width: 100%;
+  }
+}
