--- a/profile/themes/os_base/scss/component/_widgtes.scss
+++ b/profile/themes/os_base/scss/component/_widgtes.scss
@@ -112,91 +112,91 @@
         &.addthis {
           a {
             &:before {
-              background-position: -20px -190px;
+              background-position: -20px -854px;
             }
           }
         }
         &.basic {
           a {
             &:before {
-              background-position: -20px -250px;
+              background-position: -20px -794px;
             }
           }
         }
         &.custom-text-html {
           a {
             &:before {
-              background-position: -20px -490px;
+              background-position: -20px -554px;
             }
           }
         }
         &.embed-media {
           a {
             &:before {
-              background-position: -20px -610px;
+              background-position: -20px -374px;
             }
           }
         }
         &.publication-types {
           a {
             &:before {
-              background-position: -20px -910px;
+              background-position: -20px -914px;
             }
           }
         }
         &.featured-posts {
           a {
             &:before {
-              background-position: -20px -370px;
+              background-position: -20px -674px;
             }
           }
         }
         &.media-gallery {
           a {
             &:before {
-              background-position: -20px -610px;
+              background-position: -20px -374px;
             }
           }
         }
         &.publication-years {
           a {
             &:before {
-              background-position: -20px -310px;
+              background-position: -20px -734px;
             }
           }
         }
         &.rss-feed {
           a {
             &:before {
-              background-position: -20px -730px;
+              background-position: -20px -314px;
             }
           }
         }
         &.taxonomy {
           a {
             &:before {
-              background-position: -20px -132px;
+              background-position: -20px -76px;
             }
           }
         }
         &.twitter-feed {
           a {
             &:before {
-              background-position: -20px -790px;
+              background-position: -20px -194px;
             }
           }
         }
         &.follow-me {
           a {
             &:before {
-              background-position: -20px -430px;
+              background-position: -20px -614px;
             }
           }
         }
         &.mailchimp-subscription {
           a {
             &:before {
-              background-position: -20px -550px;
+              background-position: -20px -434px;
             }
           }
         }
@@ -210,7 +210,21 @@
         &.slideshow {
           a {
             &:before {
-              background-position: -20px -849px;
+              background-position: -20px -134px;
+            }
+          }
+        }
+        &.tabs {
+          a {
+            &:before {
+              background-position: -20px -254px;
+            }
+          }
+        }
+        &.list-of-posts {
+          a {
+            &:before {
+              background-position: -20px -494px;
             }
           }
         }
