--- a/profile/modules/os/modules/os_media/templates/browser.html
+++ b/profile/modules/os/modules/os_media/templates/browser.html
@@ -54,10 +54,24 @@
             </div>
         </div>
         <div class="media-browser-pane" role="tabpanel" ng-switch-when="web">
+          <div ng-show="$parent.isHtml">
             <label for="media-browser-web">URL or HTML:</label>
             <textarea id="media-browser-web" cols="60" rows="5" ng-model="$parent.embed" placeholder="Enter the URL or HTML here"></textarea>
             <div class="description embedly">Enter a URL from one of
-                <a href="http://embed.ly/embed/features/providers" target="_blank">these providers</a> or paste a snippet of HTML. The HTML may contain references to any of the <a slide-toggle="#list-of-embedly-providers">following sites</a>. Don't see what you're looking for? <a href="https://help.theopenscholar.com/embedding-third-party-content" target="_blank">Learn more about how to whitelist.</a>   <br><br>
+              <a href="http://embed.ly/embed/features/providers" target="_blank">these providers</a> or paste a snippet of HTML. The HTML may contain references to any of the <a slide-toggle="#list-of-embedly-providers">following sites</a>. Don't see what you're looking for? <a href="https://help.theopenscholar.com/embedding-third-party-content" target="_blank">Learn more about how to whitelist.</a> <br><br>
+              <div id="list-of-embedly-providers" easing="linear" duration=".2s" class="slideable">
+                  <span ng-init="limit = -21" ng-repeat="domain in whitelist" ng-mouseenter="limit = -120"
+                        ng-mouseleave="limit = -21" tooltip="{{domain}}">
+                    <span ng-hide="(limit *-1) >= domain.length">...</span>{{domain | limitTo:limit}}{{$last ? '' : ', '}}
+                  </span>
+              </div>
+            </div>
+          </div>
+          <div ng-show="!$parent.isHtml">
+            <label for="media-browser-web">URL:</label>
+            <textarea id="media-browser-web" cols="60" rows="5" ng-model="$parent.embed" placeholder="Enter the URL here"></textarea>
+            <div class="description embedly">Enter a URL from one of
+                <a href="http://embed.ly/embed/features/providers" target="_blank">these providers</a> Don't see what you're looking for? <a href="https://help.theopenscholar.com/embedding-third-party-content" target="_blank">Learn more about how to whitelist.</a>  <br><br>
                 <div id="list-of-embedly-providers" easing="linear" duration=".2s" class="slideable">
                   <span ng-init="limit = -21" ng-repeat="domain in whitelist" ng-mouseenter="limit = -120"
                         ng-mouseleave="limit = -21" tooltip="{{domain}}">
@@ -65,6 +79,7 @@
                   </span>
                 </div>
             </div>
+          </div>
             <div class="embed-failure" ng-show="embedFailure" ng-click="$parent.embedFailure = false">
                 <span class="error-icon"></span>
                 URL(s) in HTML code are not from accepted domain! Please check that all URLs are from an accepted provider, and all URLs in HTML code are from an accepted domain.
@@ -76,6 +91,10 @@
             <div class="embed-failure" ng-show="embedFailureHttps" ng-click="$parent.embedFailureHttps = false">
                 <span class="error-icon"></span>
                 URL(s) in HTML code are not accepted if the source is not https or from an accepted provider, Please check that all HTML code are from an accepted domain.
+            </div>
+            <div class="embed-failure" ng-show="embedNotAllowed" ng-click="$parent.embedNotAllowed = false">
+               <span class="error-icon"></span>
+              HTML embed is not allowed , please enter valid oembed urls only supported by Embedly for this field.
             </div>
             <div class="actions">
                 <button value="submit" ng-click="$parent.embedSubmit()">Submit</button>
