Issue #12570 - today tab in Calendar (#12628)
* Issue #12570 - Today tab added with listView.

* Issue #12570 - Today tab enabled for calendar.

* Issue #12570 - Addressed PR feedback.

* Issue #12570 - added today tab ui

--- a/profile/themes/os_base/scss/component/_calendar.scss
+++ b/profile/themes/os_base/scss/component/_calendar.scss
@@ -245,3 +245,10 @@ aside {
   display: flex;
   width: 100%;
 }
+/**** today view full calendar ****/
+.fc-today-view {
+  .fc-event-default, a {
+    background: none;
+    border: 0;
+  }
+}
