Issue #12456 - Fix - Contextual links not appearing for tabs widgets (#12601)
* Issue #12456 - Fix - Contextual links not appearing for tabs widgets

* Issue #12456 - Show contextual link within tabs

* Issue #12456 - Fix testNodeDeleteCancelButtonList failure

* Issue #12456 - tabs ui code added as per d7

* Issue #12456 - Using paragraphs for field_widget_collection.

* Issue #12456 - Paragraph field settings.

* Issue #12456 - Custom entity_reference_with_value fieldType added.

* Issue #12456 - Modified field_widget_collection.

* Issue #12456 - Updated tabs title with section_title.

* Issue #12456 - fixed contexual link overlap issue in tabs

* Issue #12456 - Modified tests for Tabs widget and addressed PR comments.

* Issue #12456 - Created category for custom field type.

* Issue #12456 - Added description for field_widget_colelction.

--- a/profile/themes/os_base/scss/component/_tabs.scss
+++ b/profile/themes/os_base/scss/component/_tabs.scss
@@ -133,3 +133,66 @@ ul.nav-tabs {
   margin-left: 0;
   margin-bottom: 10px;
 }
+/**** widget tabs ****/
+.block--type-tabs {
+  .nav-tabs {
+    display: flex;
+    margin-bottom: 0;
+    > li {
+      flex: 1 1 auto;
+      a {
+        background: $color-light-gray4;
+        color: $color-black1;
+        border-color: $color-light-gray6;
+        font-family: Arial,Helvetica,sans-serif;
+        font-size: 12px;
+        font-weight: bold;
+        letter-spacing: 0.1em;
+        padding: 25px 12px;
+        text-transform: uppercase;
+        border-bottom: 0 none;
+        border-right: 0;
+        border-radius: 0;
+        margin: 0;
+        .field {
+          margin-bottom: 0;
+        }
+      }
+      &:last-child {
+        a {
+          border-right: 1px solid $color-light-gray6;
+        }
+      }
+      &.active {
+        a {
+          background: $color-white;
+          &:hover, &:focus {
+            border-color:$color-light-gray6;
+            border-bottom: transparent;
+            border-right: 0;
+          }
+        }
+        &:last-child {
+          a {
+            &:hover, &:focus {
+              border-right: 1px solid $color-light-gray6;
+            }
+          }
+        }
+      }
+    }
+  }
+  .tab-content {
+    border: 1px solid $color-light-gray6;
+    border-top: 0;
+    margin-top: 0;
+    color: $color-black1;
+    padding: 10px;
+  }
+  //contexual filter overlap fixes
+  .tab-pane {
+    .contextual {
+      top: 35px;
+    }
+  }
+}
