--- a/profile/modules/apps/os_widgets/templates/os-widgets-tabs.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-tabs.html.twig
@@ -15,7 +15,7 @@
     {% if loop.first %}
       {% set activeClass = 'active'  %}
     {% endif %}
-      <li class="{{ activeClass }}" role="presentation"><a data-toggle="tab" href="#tab-{{ key }}" aria-controls="tab-{{ key }}">{{ content.field_widget_title }}</a></li>
+      <li class="{{ activeClass }}" role="presentation"><a data-toggle="tab" href="#tab-{{ key }}" aria-controls="tab-{{ key }}">{{ content.section_title }}</a></li>
   {% endfor %}
 </ul>
 <div class="tab-content">
@@ -25,7 +25,8 @@
       {% set activeClass = 'active'  %}
     {% endif %}
     <div id="tab-{{ key }}" class="tab-pane {{ activeClass }}" role="tabpanel">
-      {{ content }}
+      {{ content.widget }}
+      {{ content.contextual_link }}
     </div>
   {% endfor %}
 </div>
