Issue #12455 - Accordion widget (#12548)
* Issue #12455 - Accordion custom block with fields.

* Issue #12455 - Accordion widget code changes.

* Issue #12455 - Accordion block code changes.

* Issue #12455 - Added tests and block-comments in twig.

* Issue #12455 - Modified fields display settings for Accordion block_type.

* Issue #12455 - Corrected class name for Tests file.

* Issue #12455 - fixing ally

* Issue #12455 - Renamed widget collection field.

* Issue #12455 - Changes required for accordion widget field.

* Issue #12455 - Added unique id for accordion.

* Issue #12456 - Fix - Contextual links not appearing for tabs widgets

* Issue #12456 - Show contextual link within tabs

* Issue #12456 - Fix testNodeDeleteCancelButtonList failure

* Issue #12456 - tabs ui code added as per d7

* Issue #12456 - Using paragraphs for field_widget_collection.

* Issue #12456 - Paragraph field settings.

* Issue #12456 - Custom entity_reference_with_value fieldType added.

* Issue #12456 - Modified field_widget_collection.

* Issue #12456 - Updated tabs title with section_title.

* Issue #12456 - fixed contexual link overlap issue in tabs

* Issue #12456 - Modified tests for Tabs widget and addressed PR comments.

* Issue #12455 - Contextual links and field changes.

* Issue #12455 - Created category for custom field type.

* Issue #12456 - Created category for custom field type.

* Issue #12455 - accordion widget contexual links overlap fixes

* Issue #12456 - Added description for field_widget_colelction.

* Issue #12455 - Added description for field_widget_collection.

--- a/profile/themes/os_base/scss/_overrides.scss
+++ b/profile/themes/os_base/scss/_overrides.scss
@@ -38,6 +38,7 @@
 @import "component/mailchimp";
 @import "component/wysiwyg";
 @import "component/list-of-posts";
+@import "component/accordion";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
