Issue #12455 - accordion ui add and minus added (#12650)
* Issue #12455 - accordion ui add and minus added

* Issue #12455 - fixed code review points

--- a/profile/modules/apps/os_widgets/templates/os-widgets-accordion.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-accordion.html.twig
@@ -15,12 +15,14 @@
     <div class="panel panel-default">
       {% if (loop.first) and (collapsible == 0) %}
         {% set collapseAll = 'in'  %}
+        {% set icon = 'glyphicon-minus' %}
       {% else %}
         {% set collapseAll = ''  %}
+        {% set icon = 'glyphicon-plus' %}
       {% endif %}
       <div class="panel-heading" role="tab">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse-{{ key }}" aria-controls="#collapse-{{ key }}">{{ content.section_title }}</a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse-{{ key }}" aria-controls="#collapse-{{ key }}">{{ content.section_title }} <i class="more-less glyphicon {{icon}}"></i> </a>
         </h4>
       </div>
       <div id="collapse-{{ key }}" class="panel-collapse collapse {{ collapseAll }}" role="tabpanel">
