--- a/profile/themes/os_base/scss/component/_rss-feed.scss
+++ b/profile/themes/os_base/scss/component/_rss-feed.scss
@@ -1,4 +1,5 @@
-.rss-feed-link, .feed-icons a {
+.rss-feed-link,
+.feed-icons a {
   display: flex;
   &:before {
     content: "";
@@ -6,5 +7,26 @@
     width: 24px;
     height: 24px;
     margin-right: 6px;
+  }
+}
+/**** rss feed page ****/
+.rss-feed-section {
+  .feed-title {
+    margin-top: 15px;
+  }
+  .item-list {
+    margin: 0;
+  }
+  .feed-items {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    a {
+      &:before {
+        background: url(../../../themes/os_base/images/scholarbase-sprite.png) 0 -756px no-repeat;
+        content: "";
+        padding-left: 21px;
+      }
+    }
   }
 }
